--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="index.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon2.ico" type="image/x-icon" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
