--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <main>
       <section>
         <h2>Meta-Pigeon Sneaker NFT $33,000</h2>
-        <img src="images/boots.png" alt="Purple and silver sneakers" />
+        <img
+          class="main-image"
+          src="images/purple_shoes.png"
+          alt="Purple and silver sneakers"
+        />
         <p><strong>At $33k, this NFT sneaker is super good value!</strong></p>
         <p>
           If you've got lots of money and you're a bit daft, NFTs are a great
@@ -37,7 +41,7 @@
         <h2>For the true Crypto-connoisseur</h2>
         <img
           src="images/avatar.png"
-          alt="punk with blach hair and red and blue glasses"
+          alt="punk with black hair and red and blue glasses"
         />
         <img
           src="images/bag.svg"
