--- a/index.html
+++ b/index.html
@@ -9,57 +9,73 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <title>NFT site</title>
   <body>
     <header>
-      <h1>Insanely Expensive JPEGs</h1>
-      <h3>(Also known as NFTs)</h3>
+      <div class="container">
+        <h1>Insanely Expensive JPEGs</h1>
+        <h3>(Also known as NFTs)</h3>
+      </div>
     </header>
     <main>
-      <section>
-        <h2>Meta-Pigeon Sneaker NFT $33,000</h2>
-        <img
-          class="main-image"
-          src="images/purple_shoes.png"
-          alt="Purple and silver sneakers"
-        />
-        <p><strong>At $33k, this NFT sneaker is super good value!</strong></p>
-        <p>
-          If you've got lots of money and you're a bit daft, NFTs are a great
-          way to pay for something that doesn't have any intrinsic value or even
-          exist. Tech fashionistas are jumping on the NFT bandwagon and spending
-          eye-watering sums of money on crypto images. Our advice: spend the
-          weekend <a href="">crafting an NFT</a> and by this time next week,
-          you'll be a millionaire.
-        </p>
-        <a href="#">Buy NFT</a>
-        <a href="#">More info</a>
+      <section class="section-one">
+        <div class="container">
+          <h2>Meta-Pigeon Sneaker NFT $33,000</h2>
+          <img
+            class="main-image"
+            src="images/purple_shoes.png"
+            alt="Purple and silver sneakers"
+          />
+          <p><strong>At $33k, this NFT sneaker is super good value!</strong></p>
+          <p>
+            If you've got lots of money and you're a bit daft, NFTs are a great
+            way to pay for something that doesn't have any intrinsic value or
+            even exist. Tech fashionistas are jumping on the NFT bandwagon and
+            spending eye-watering sums of money on crypto images. Our advice:
+            spend the weekend <a href="">crafting an NFT</a> and by this time
+            next week, you'll be a millionaire.
+          </p>
+          <a href="#" class="btn-dark">Buy NFT</a>
+          <a href="#" class="btn-mid">More info</a>
+        </div>
       </section>
 
-      <section>
-        <h2>For the true Crypto-connoisseur</h2>
-        <img
-          src="images/avatar.png"
-          alt="punk with black hair and red and blue glasses"
-        />
-        <img
-          src="images/bag.svg"
-          alt="Seven items from a game listed in white on a black background"
-        />
-        <p>
-          Is $33k for sneakers too basic for you? No problem! This CryptoPunk
-          (left) is a steal at $6.6 million! Which makes Bag #748 (right) a
-          total bargain at $1.4 million. And by the way, that's not a VS Code
-          screenshot we included by mistake. The eight lines of white text on a
-          black background is the actual NFT we're selling.
-        </p>
-        <a href="#">About Us</a>
-        <a href="#">Contact</a>
-        <p>
-          Still not convinced? To be honest, nor are we. That's why we're
-          selling them, not buying them.
-        </p>
+      <section class="section-two">
+        <div class="container">
+          <h2>For the true Crypto-connoisseur</h2>
+          <div class="container-img">
+            <img
+              class="section-two-image"
+              src="images/avatar.png"
+              alt="punk with black hair and red and blue glasses"
+            />
+            <img
+              class="section-two-image"
+              src="images/bag.svg"
+              alt="Seven items from a game listed in white on a black background"
+            />
+          </div>
+
+          <p>
+            Is $33k for sneakers too basic for you? No problem! This CryptoPunk
+            (left) is a steal at $6.6 million! Which makes Bag #748 (right) a
+            total bargain at $1.4 million. And by the way, that's not a VS Code
+            screenshot we included by mistake. The eight lines of white text on
+            a black background is the actual NFT we're selling.
+          </p>
+          <a href="#" class="btn-light">About Us</a>
+          <a href="#" class="btn-mid">Contact</a>
+          <p>
+            Still not convinced? To be honest, nor are we. That's why we're
+            selling them, not buying them.
+          </p>
+        </div>
       </section>
     </main>
     <footer>
