--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             spend the weekend <a href="">crafting an NFT</a> and by this time
             next week, you'll be a millionaire.
           </p>
-          <a href="#" class="btn-dark">Buy NFT</a>
-          <a href="#" class="btn-mid">More info</a>
+          <a href="#" class="btn btn-dark">Buy NFT</a>
+          <a href="#" class="btn btn-mid">More info</a>
         </div>
       </section>
 
@@ -69,8 +69,8 @@
             screenshot we included by mistake. The eight lines of white text on
             a black background is the actual NFT we're selling.
           </p>
-          <a href="#" class="btn-light">About Us</a>
-          <a href="#" class="btn-mid">Contact</a>
+          <a href="#" class="btn btn-light">About Us</a>
+          <a href="#" class="btn btn-mid">Contact</a>
           <p>
             Still not convinced? To be honest, nor are we. That's why we're
             selling them, not buying them.
