--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <section class="section-two">
         <div class="container">
           <h2>For the true Crypto-connoisseur</h2>
-          <div class="container-img">
+          <div class="section-two-image-container">
             <img
               class="section-two-image"
               src="images/avatar.png"
