--- a/index.html
+++ b/index.html
@@ -20,8 +20,19 @@
   <body>
     <header>
       <div class="container">
-        <h1>Insanely Expensive JPEGs</h1>
-        <h3>(Also known as NFTs)</h3>
+        <h1>
+          Wildly Expensive JPEGs
+          <span class="subheading">(Also known as NFTs)</span>
+        </h1>
+
+        <!-- Site Navigation -->
+        <nav>
+          <ul>
+            <li><a href="#">Buy</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Explore</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
