--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <!-- Site Navigation -->
         <nav>
           <ul>
-            <li><a href="#">Buy</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Explore</a></li>
+            <li><a class="nav-item" href="#">Buy</a></li>
+            <li><a class="nav-item" href="#">Resources</a></li>
+            <li><a class="nav-item" href="#">Explore</a></li>
           </ul>
         </nav>
       </div>
